bugfix: fixed image stretching in portrait mode

--- a/src/scss/layout/_stretch.scss
+++ b/src/scss/layout/_stretch.scss
@@ -24,3 +24,8 @@
 	max-height: 100% !important;
 	object-fit: cover;
 }
+
+.stretch-column > * > p{
+	height: 100%;
+	width: 100%;
+}
